Sat Jun  5 14:11:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/net/imap/test_imap.rb (test_exception_during_shutdown):
	  need to raise always.

Sat Jun  5 13:13:30 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb (eql?, ==, minor): Fix bugs when comparing/returning
	  some empty matrices.

Sat Jun  5 11:00:48 2010  Tanaka Akira  <akr@fsij.org>

	* error.c (rb_name_err_mesg_new): guard mesg, recv and method.
	  The problem in [ruby-dev:41464] is caused because mesg is collected.

Sat Jun  5 10:03:31 2010  Tanaka Akira  <akr@fsij.org>

	* .gdbinit (rp): detect and show RTypedData.

Sat Jun  5 09:56:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options): revert r25330, so that $0 can be seen
	  from required libraries by -r option.  [ruby-core:23717]

Sat Jun  5 08:30:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_f_test): 'W' should test writable by real uid/git,
	  not world writable.   [ruby-core:30587]

Sat Jun  5 06:20:57 2010  Eric Hodel  <drbrain@segment7.net>

	* dir.c: Clarification of what '*' matches.  Patch by John Wells
	  <john.wells at greatworx.com>

Fri Jun  4 10:46:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_inspect): should taint the result.
	  [ruby-dev:41533]

Fri Jun  4 09:37:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* gc.c (gc_sweep): suppress a warning on VC, again.

Thu Jun  3 23:34:55 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/digest/hmac.rb: Emit a deprecation warning in
	  verbose mode and add a caution to the overview section of the
	  document. [ruby-dev:41525]

Thu Jun  3 19:33:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_inspect): suppress warnings by
	  rb_sprintf.

	* ext/dl/cptr.c (rb_dlptr_s_malloc): suppress warnings.

Thu Jun  3 18:58:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (ruby_init_ext): statically linked extensions have no